src/test/deca/context/valid/provided/lower.deca
//lower
{
    if (2<1){
        println("groupe_32");
    }
    else if (2<=1){
        println("SEKKKAL");
    }
}