src/test/deca/context/invalid/provided/testwhile.deca
{
    int a = 2, b=0;

    while (!(u==1)) {
	if (a%2 == 0) {
	    a = a/2;
	} else	{
	b = b + 1;
	//	println(a);
    }}
    println(b);
}
